--- a/app/src/main/res/layout/item_home_section.xml
+++ b/app/src/main/res/layout/item_home_section.xml
@@ -19,7 +19,7 @@
         android:textSize="18sp"
         tools:text="Next Up"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_top_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Horizontal Content Container -->
     <LinearLayout
@@ -28,7 +28,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:weightSum="10"
-        app:layout_top_toBottomOf="@id/tvSectionTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvSectionTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
